edit crafts section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </div> 
   </nav>
   <main>
-    <section class="Crafts bggray">
+    <!-- .......Crafts section............... -->
+    <!-- <section class="Crafts bggray">
     <div class="container">
         <h3 class=" title fs-3">The Best of Palestinian Crafts</h3>
         <h4 class=" title1 fs-5">Explore fair trade gifts & crafts, handmade in Palestine</h4>
@@ -88,7 +89,50 @@
     </div>   
     </div>
 
-    </section>
+    </section> -->
+    <section class="Crafts bggray">
+  <div class="container">
+    <h3 class="title fs-3">The Best of Palestinian Crafts</h3>
+    <h4 class="title1 fs-5">Explore fair trade gifts & crafts, handmade in Palestine</h4>
+
+    <div class="grids mt-5 d-flex flex-wrap gap-4 justify-content-center">
+      
+      <!-- Grid 1 -->
+      <a href="clothing.html" class="w-70 craft text-decoration-none text-center">
+        <div class="clothing">
+          <img src="assets/images/clothing.jpeg" alt="Palestine Shawl" class="images">
+          <p class="mt-2 text-dark fw-semibold">Palestine Shawl</p>
+        </div>
+      </a>
+
+      <!-- Grid 2 -->
+      <a href="gifts.html" class="w-70 craft text-decoration-none text-center">
+        <div class="clothing">
+          <img src="assets/images/gifts.jpeg" alt="Gifts" class="images">
+          <p class="mt-2 text-dark fw-semibold">Gifts</p>
+        </div>
+      </a>
+
+      <!-- Grid 3 -->
+      <a href="jewelry.html" class="w-70 craft text-decoration-none text-center">
+        <div class="clothing">
+          <img src="assets/images/jewelry.jpeg" alt="Jewelry" class="images">
+          <p class="mt-2 text-dark fw-semibold">Jewelry</p>
+        </div>
+      </a>
+
+      <!-- Grid 4 -->
+      <a href="home-kitchen.html" class="w-70 craft text-decoration-none text-center">
+        <div class="clothing">
+          <img src="assets/images/home&kitchin.jpeg" alt="Home & Kitchen" class="images">
+          <p class="mt-2 text-dark fw-semibold">Home & Kitchen</p>
+        </div>
+      </a>
+
+    </div>
+  </div>
+</section>
+
     <!-- .........CustomersFavorites section............-->
      <!-- <section class="customersFavorites bggray">
         <div class="container">
