add copyright by footer section + add logo

--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
   <nav class="navbar navbar-expand-lg bg-white fixed-top">
   <div class="container-fluid m-1">
    <i class="bi bi-bag-fill icon"></i> 
-
     <button class="navbar-toggler  me-2 bttn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse  " id="navbarSupportedContent">
-     
       <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
         <li class="nav-item mx-2">
           <a class="nav-link text-danger" href="#About">About</a>
@@ -226,6 +224,7 @@
         </ul>
       </div>
     </div>
+    <div class="copyright text-center"><img src="assets/images/footer-logo.png" class="img-fluid footerLogo" alt="footer Logo">Copyright © 2025 SUNBULA.STORE </div>
    
    
 </div>
