add more html pages

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- <link rel="icon" type="image/png" href="logo.png"> -->
 </head>
 
 <body>
   <!-- ....header....... -->
-  <header>
+  <header class="homeHeader">
    <h1>SHOP LOCAL • SUPPORT HANDMADE</h1>
 </header>
 <!-- ..............navbar...................... -->
@@ -27,29 +26,29 @@
     <div class="collapse navbar-collapse  " id="navbarSupportedContent">
       <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
         <li class="nav-item mx-2">
-          <a class="nav-link " href="#About">About</a>
+          <a class="nav-link text-danger" href="about.html">About</a>
         </li>
           <div class="lineNav ms-3 me-3"></div>
     
          <li class="nav-item mx-2">
-          <a class="nav-link text-danger" href="Clothing.html">Clothing</a>
+          <a class="nav-link text-danger " href="Clothing.html">Clothing</a>
         </li>
         <li class="nav-item mx-2">
           <a class="nav-link text-danger" href="Bags&Accessoies.html">Bags&Accessoies</a>
         </li>
        <li class="nav-item mx-2">
-          <a class="nav-link text-danger " href="#Home&Kitchin.html">Home&Kitchin</a>
+          <a class="nav-link text-danger " href="Home&Kitchin.html">Home&Kitchin</a>
         </li>
         
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link " href="#Jewelry">Jewelry</a>
+          <a class="nav-link text-danger" href="jewelry.html">Jewelry</a>
         </li>
          <li class="nav-item mx-2">
-          <a class="nav-link " href="#Kids&Babies">Kids&Babies</a>
+          <a class="nav-link text-danger" href="kids&babies.html">Kids&Babies</a>
         </li>
            <li class="nav-item mx-2">
-          <a class="nav-link " href="#Gifts">Gifts</a>
+          <a class="nav-link text-danger " href="gifts.html">Gifts</a>
         </li>
 
       </ul>
@@ -252,8 +251,36 @@
      </div>
       </div>
     </section>
+<!-- <section class="raghadStor">
+  <div class="container">
+    <img src="assets/images/bag.jpeg" alt="">
+    <img src="assets/images/clothing.jpeg" alt="">
+    <img src="assets/images/book.jpeg" alt="">
+    <img src="assets/images/home.jpeg" alt="">
+    <img src="assets/images/gifts2.jpeg" alt="">
+    <img src="assets/images/Keffiyehs.jpeg" alt="">
+    <img src="assets/images/kids&bebies.jpeg" alt="">
+    <img src="assets/images/Table Runner.jpeg" alt="">
+    <img src="assets/images/jewelry9.jpeg" alt="">
+  </div>
 
-  </main>
+</section> -->
+ <!-- <section class="raghadStor">
+  <div class="container">
+    <div class="gallery d-flex flex-wrap justify-content-center gap-2">
+      <img src="assets/images/bag.jpeg" alt="">
+      <img src="assets/images/clothing.jpeg" alt="">
+      <img src="assets/images/book.jpeg" alt="">
+      <img src="assets/images/home.jpeg" alt="">
+      <img src="assets/images/gifts2.jpeg" alt="">
+      <img src="assets/images/Keffiyehs.jpeg" alt="">
+      <img src="assets/images/kids&bebies.jpeg" alt="">
+      <img src="assets/images/Table Runner.jpeg" alt="">
+      <img src="assets/images/jewelry9.jpeg" alt="">
+    </div>
+  </div>
+</section> -->
+</main>
  <footer class="Footer">
   <div class="container">
     <div class="flex">
