--- a/books & bookmarks.html
+++ b/books & bookmarks.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunbula Store</title>
+        <title>Sunbula Store</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-       <!-- ..............navbar...................... -->
+         <!-- ..............navbar...................... -->
   <nav class="navbar navbar-expand-lg bg-white fixed-top">
   <div class="container-fluid m-1">
     <a href="index.html"> <img  src="assets/images/logo.png" class="Logo" alt=""></a>
@@ -51,46 +51,64 @@
   </div>
     </div> 
   </nav>
-    <header class="kidsHeader">
-        <h1 class=" text-center mb-4">GIFTS</h1>
-        <p class="text-center">Looking for a handmade gift from Palestine? From books on Palestinian tatreez embroidery to handcrafted Christmas greeting<br> cards,explore our selection of handmade gifts by our artisans in Palestine. Showcasing traditional Palestinian embroidery and<br> paper-making techniques, there is nothing better than gifting your loved ones with the beauty and wonders of Palestine.</p>
-    </header>
-    <main>
-        <section>
+  <header class="kidsHeader">
+    <h1 class="mb-3 text-center">Book & Bookmarks</h1>
+    <p class="text-center">Explore our range of beautiful hand stitched bookmarks and books on Palestinian embroidery.<br> From embroidery techniques to the history of embroidery in Palestine.</p>
+  </header>
+   <main>
+        <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
       <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="books & bookmarks.html">
             <img src="assets/images/book.jpeg" alt="..">
-          <h5 class="product-name">Books & Bookmarks</h5>
-        </a>
+          <h5 class="product-name">Seventeen Embroidery Techniques from Palestine</h5>
+        <p class="producer"></p>
+          <p class="price">$25</p>
+          <button></button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="greeting cards.html">
-            <img src="assets/images/card.jpeg" alt="..">
-          <h5 class="product-name">Greeting Cards</h5>
-        </a>
+            <img src="assets/images/book2.jpeg" alt="..">
+          <h5 class="product-name">Embroidering A Life</h5>
+          <p class="producer "></p>
+            <p class="price">$10</p>
+          <button></button>
         </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="olive oil soap.html">
-            <img src="assets/images/soap1.jpeg" alt="..">
-          <h5 class="product-name">Olive Oil Soap</h5>
-        </a>
+            <img src="assets/images/book3.jpeg" alt="..">
+          <h5 class="product-name">Gaza Bookmarks </h5>
+          <p class="producer"></p>
+            <p class="price">$6</p>
+          <button></button>
         </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="keychains.html">
-            <img src="assets/images/key1.jpeg" alt="..">
-          <h5 class="product-name">Keychains</h5>
-        </a>
+            <img src="assets/images/book44.jpeg" alt="..">
+          <h5 class="product-name">Cross-stitch Bookmark</h5>
+          <p class="producer"></p>
+            <p class="price">$8</p>
+          <button></button>
         </div></div>
-        
+         <div class="col-lg-3 col-md-6 col-sm-12">
+         <div class="product-card">
+            <img src="assets/images/book5.jpeg" alt="..">
+          <h5 class="product-name">Cross-stitch Bookmark</h5>
+          <p class="producer"></p>
+            <p class="price">$8</p>
+          <button></button>
         </div></div>
-
+        <div class="col-lg-3 col-md-6 col-sm-12">
+         <div class="product-card">
+            <img src="assets/images/book6.jpeg" alt="..">
+          <h5 class="product-name">Cross-stitch Bookmark</h5>
+          <p class="producer"></p>
+            <p class="price">$8</p>
+          <button></button>
+        </div></div>
+        </div></div>
         </section>
     </main>
      <footer class="Footer">
