--- a/decor.html
+++ b/decor.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunbula Store</title>
+        <title>Sunbula Store</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-       <!-- ..............navbar...................... -->
+         <!-- ..............navbar...................... -->
   <nav class="navbar navbar-expand-lg bg-white fixed-top">
   <div class="container-fluid m-1">
     <a href="index.html"> <img  src="assets/images/logo.png" class="Logo" alt=""></a>
@@ -51,46 +51,48 @@
   </div>
     </div> 
   </nav>
-    <header class="kidsHeader">
-        <h1 class=" text-center mb-4">GIFTS</h1>
-        <p class="text-center">Looking for a handmade gift from Palestine? From books on Palestinian tatreez embroidery to handcrafted Christmas greeting<br> cards,explore our selection of handmade gifts by our artisans in Palestine. Showcasing traditional Palestinian embroidery and<br> paper-making techniques, there is nothing better than gifting your loved ones with the beauty and wonders of Palestine.</p>
-    </header>
-    <main>
-        <section>
+  <header class="kidsHeader">
+    <h1 class="mb-3 text-center">Decor</h1>
+    <p class="text-center">Explore our range of unique Palestinian decor. Brighten up your home with vibrant<br> Palestinian home decor hand crafted by artisans in the West Bank.</p>
+  </header>
+   <main>
+        <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
       <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="books & bookmarks.html">
-            <img src="assets/images/book.jpeg" alt="..">
-          <h5 class="product-name">Books & Bookmarks</h5>
-        </a>
+            <img src="assets/images/decor1.jpeg" alt="..">
+          <h5 class="product-name">Embroidered Wall Hanging - al-Humdu</h5>
+        <p class="producer">In stylized Arabic read "al-Hamdulillah (thanks be to God)." Embroidered on black cotton.</p>
+          <p class="price">$15</p>
+          <button></button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="greeting cards.html">
-            <img src="assets/images/card.jpeg" alt="..">
-          <h5 class="product-name">Greeting Cards</h5>
-        </a>
+            <img src="assets/images/decor2.jpeg" alt="..">
+          <h5 class="product-name">Wooden/Ceramic Kariya Keyholder</h5>
+          <p class="producer">Hand-painted tiles with 'kariya' (village) scenery of Gaza. Wooden frame with hook on the back for hanging on the wall.</p>
+            <p class="price">$21</p>
+          <button></button>
         </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="olive oil soap.html">
-            <img src="assets/images/soap1.jpeg" alt="..">
-          <h5 class="product-name">Olive Oil Soap</h5>
-        </a>
+            <img src="assets/images/decor3.jpeg" alt="..">
+          <h5 class="product-name">Miniature Arabesque Mirror </h5>
+          <p class="producer">Arabesque patterns are intricately hand-carved on this wooden mirror by artisans from Gaza. Hanging hook on the back.</p>
+            <p class="price">$24</p>
+          <button></button>
         </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="keychains.html">
-            <img src="assets/images/key1.jpeg" alt="..">
-          <h5 class="product-name">Keychains</h5>
-        </a>
+            <img src="assets/images/decor4.jpeg" alt="..">
+          <h5 class="product-name">Mirror with Three Arabesque Tiles</h5>
+          <p class="producer">Hand-painted arabesque tiles adorn this beautiful mirror, made by artisans of Gaza. Hanging hook on the back.</p>
+            <p class="price">$16</p>
+          <button></button>
         </div></div>
-        
         </div></div>
-
         </section>
     </main>
      <footer class="Footer">
