--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunbula Store</title>
+        <title>Sunbula Store</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-       <!-- ..............navbar...................... -->
+         <!-- ..............navbar...................... -->
   <nav class="navbar navbar-expand-lg bg-white fixed-top">
   <div class="container-fluid m-1">
     <a href="index.html"> <img  src="assets/images/logo.png" class="Logo" alt=""></a>
@@ -51,46 +51,66 @@
   </div>
     </div> 
   </nav>
-    <header class="kidsHeader">
-        <h1 class=" text-center mb-4">GIFTS</h1>
-        <p class="text-center">Looking for a handmade gift from Palestine? From books on Palestinian tatreez embroidery to handcrafted Christmas greeting<br> cards,explore our selection of handmade gifts by our artisans in Palestine. Showcasing traditional Palestinian embroidery and<br> paper-making techniques, there is nothing better than gifting your loved ones with the beauty and wonders of Palestine.</p>
-    </header>
-    <main>
-        <section>
+  <header class="kidsHeader">
+    <h1 class="mb-3 text-center">Cushions</h1>
+    <p class="text-center">Add colour to your home with our vibrantly embroidered cushion covers. Unique Palestinian motifs <br>
+        are hand stitched on these embroidered cushions by talented artisans across Palestine.</p>
+  </header>
+   <main>
+        <section class="homeSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
       <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="books & bookmarks.html">
-            <img src="assets/images/book.jpeg" alt="..">
-          <h5 class="product-name">Books & Bookmarks</h5>
-        </a>
+            <img src="assets/images/home1.jpeg" alt="..">
+          <h5 class="product-name">Embroidered Cushion Cover - Kohl Holders</h5>
+        <p class="producer">This small-size cushion cover is intricately hand-embroidered with the traditional Kohl Holders pattern 100% cotton.</p>
+          <p class="price">$50</p>
+          <button></button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="greeting cards.html">
-            <img src="assets/images/card.jpeg" alt="..">
-          <h5 class="product-name">Greeting Cards</h5>
-        </a>
+            <img src="assets/images/home2.jpeg" alt="..">
+          <h5 class="product-name">Embroidered Cushion Cover - Kohl Holders</h5>
+          <p class="producer">This small-size cushion cover is intricately hand-embroidered with the traditional Kohl Holders pattern 100% cotton.</p>
+            <p class="price">$55</p>
+          <button></button>
         </div></div>
           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="olive oil soap.html">
-            <img src="assets/images/soap1.jpeg" alt="..">
-          <h5 class="product-name">Olive Oil Soap</h5>
-        </a>
+            <img src="assets/images/home3.jpeg" alt="..">
+          <h5 class="product-name">Embroidered Cushion Cover - Qamar</h5>
+           <p class="producer">This small-size hand-embroidered cushion cover is named Qamar, Arabic for moon, the symbol of radiant beauty.</p>
+            <p class="price">$60</p>
+          <button></button>
         </div></div>
           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="keychains.html">
-            <img src="assets/images/key1.jpeg" alt="..">
-          <h5 class="product-name">Keychains</h5>
-        </a>
+            <img src="assets/images/home4.jpeg" alt="..">
+          <h5 class="product-name">Embroidered Cushion Cover - Suleiman Mansour</h5>
+           <p class="producer">This beautiful embroidered pillow is designed by the renowned Palestinian artist Suleiman Mansour, and features the word 'Allah' in stylized Arabic on four corners. Cotton 100%.</p>
+            <p class="price">$64</p>
+          <button></button>
         </div></div>
+         <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+            <img src="assets/images/home6.jpeg" alt="..">
+          <h5 class="product-name">Embroidered Cushion Cover - Old Surif</h5>
+           <p class="producer">This gorgeous pillow is hand-embroidered with the classic designs from the village of Surif. Cotton 100%.</p>
+            <p class="price">$70</p>
+          <button></button>
         
         </div></div>
-
+         <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+            <img src="assets/images/home7.jpeg" alt="..">
+          <h5 class="product-name">Embroidered Cushion - Almond Flowers</h5>
+             <p class="producer">The 'almond flowers' pattern dipicts the spring time in Palestine, and was commonly used in the old days to adorn dresses and pillows. Made with the Syrian 'moreh' fabric. Stuffing included.</p>
+            <p class="price">$66</p>
+          <button></button>
+        </div></div>
+        </div></div>
         </section>
     </main>
      <footer class="Footer">
