--- a/kids&babies.html
+++ b/kids&babies.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunbula Store</title>
-       <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sunbula Store</title>
+   <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <!-- ..............navbar...................... -->
+<!-- ..............navbar...................... -->
   <nav class="navbar navbar-expand-lg bg-white fixed-top">
   <div class="container-fluid m-1">
+    <a href="index.html"> <img  src="assets/images/logo.png" class="Logo" alt=""></a>
    <i class="bi bi-bag-fill icon"></i> 
     <button class="navbar-toggler  me-2 bttn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,29 +21,29 @@
     <div class="collapse navbar-collapse  " id="navbarSupportedContent">
       <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
         <li class="nav-item mx-2">
-          <a class="nav-link text-danger" href="#About">About</a>
+          <a class="nav-link text-danger " href="about.html">About</a>
         </li>
           <div class="lineNav ms-3 me-3"></div>
     
          <li class="nav-item mx-2">
-          <a class="nav-link text-danger" href="#Clothing">Clothing</a>
+          <a class="nav-link text-danger" href="Clothing.html">Clothing</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link text-danger" href="#Bags&Accessoies">Bags&Accessoies</a>
+          <a class="nav-link text-danger" href="Bags&Accessoies.html">Bags&Accessoies</a>
         </li>
        <li class="nav-item mx-2">
-          <a class="nav-link text-danger " href="#Home&Kitchin">Home&Kitchin</a>
+          <a class="nav-link text-danger " href="Home&Kitchin.html">Home&Kitchin</a>
         </li>
         
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link text-danger " href="#Jewelry">Jewelry</a>
+          <a class="nav-link text-danger" href="jewelry.html">Jewelry</a>
         </li>
          <li class="nav-item mx-2">
-          <a class="nav-link text-danger " href="#Kids&Babies">Kids&Babies</a>
+          <a class="nav-link text-danger" href="kids&babies.html">Kids&Babies</a>
         </li>
            <li class="nav-item mx-2">
-          <a class="nav-link text-danger " href="#Gifts">Gifts</a>
+          <a class="nav-link text-danger " href="gifts.html">Gifts</a>
         </li>
 
       </ul>
@@ -50,17 +51,86 @@
   </div>
     </div> 
   </nav>
+<header class="kidsHeader">
+  <h1 class=" mb-3 text-center">KIDS & BABIES</h1>
+  <p class="text-center mb-5">Add cuteness to your kids’ wardrobes with unique fair trade clothing that has been ethically-made in <br>Palestine. From adorable onesies to cross-stitched toddler dresses adorned with vibrant traditional <br>Palestinian motifs, our online selection of kids’ apparel is made from natural, earth-friendly fabrics.<br> With our range of handcrafted fair trade toys that highlight the unique needle-felting techniques of <br>Palestinian artisans,let your kids create their very own desert adventures.</p>
+</header>
+<main>
+<section class="kids_Babies">
+  <div class="container my-4">
+    <div class="row justify-content-center gy-4">
 
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/kids1.jpeg" alt="Baby Bib">
+          <h5 class="product-name">Baby Bib (L) - Saru</h5>
+          <p class="producer">Surif Women's Cooperative</p>
+          <p class="price">$13</p>
+        </div></div>
 
-
-
-
-
-  
-   <footer class="Footer">
+      <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/kids2.jpeg" alt="Baby Onesie">
+          <h5 class="product-name">Baby Onesie - Beautiful</h5>
+          <p class="producer">Oasis Workshop</p>
+          <p class="price">$10</p>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/kids3.jpeg" alt="Baby Onesie">
+          <h5 class="product-name">Baby Onesie - Awesome</h5>
+          <p class="producer">Stylish and comfy baby onesie made from premium cotton</p>
+          <p class="price">$10</p>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/kids4.jpeg" alt="Baby Onesie">
+          <h5 class="product-name">Baby Donkey</h5>
+          <p class="producer">An adorable stuffed animal donkey, made with a pretty of Syrian fabric.</p>
+          <p class="price">$21</p>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/kids5.jpeg" alt="Baby Onesie">
+          <h5 class="product-name">Bedouin Needle-felted Camel (S)</h5>
+          <p class="producer">These adorable camels are made of 100% natural sheep wool with needle-felting techniques, by Bedouin women in Jerusalem area.</p>
+          <p class="price">$20</p>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/kids6.jpeg" alt="Baby Onesie">
+          <h5 class="product-name">Felt Sheep</h5>
+          <p class="producer">Cute little sheep made of real sheep wool from Bethlehem. Available in beige and light brown.</p>
+          <p class="price">$4</p>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/kids7.jpeg" alt="Baby Onesie">
+          <h5 class="product-name">Felt Caterpillar</h5>
+          <p class="producer">Humorous caterpillars made of natural sheep wool from Bethlehem. A perfect toy for small children. Available in assorted colors.</p>
+          <p class="price">$7</p>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/kids8.jpeg" alt="Baby Onesie">
+          <h5 class="product-name">Cross-stitch Dress - Sarou</h5>
+          <p class="producer">Hand-embroidered 'sarou' (cypress) motif adorns this special dress. Viscose 100%, button closure and straps to tie in the back. 5cm hem on the skirt.</p>
+          <p class="price">$20</p>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/kids9.jpeg" alt="Baby Onesie">
+          <h5 class="product-name">Cross-stitch Baby Dress</h5>
+          <p class="producer">Hand-embroidered dress for that special little girl. Viscose 100%, lined, with a 5-cm hem at the bottom. Zipper on the side. Available in sizes 3-6 months, 6-12 months, and 12-18 months.</p>
+          <p class="price">$30</p>
+        </div></div>
+    </div></div>
+</section>
+</main>
+ <footer class="Footer">
   <div class="container">
     <div class="flex">
-      <div>
+      <div >
         <h3>ABOUT</h3>
         <ul>
             <li><a href="#Our Story">Our Story</a></li>
@@ -80,11 +150,11 @@
             <li><a href="#Gifts">Gifts</a></li>
          </ul>
       </div>
-      <div>
+      <div >
       <h3>Follow Us</h3>
       <p> <a href=""><i class="fa-brands fa-facebook-f"></i></a>  <a href=""> <i class="fa-brands fa-instagram"></i></a> <a href=""><i class="fa-brands fa-twitter"></i></a></p>
       </div>
-      <div>
+      <div >
         <h3>CONNECT WITH US</h3>
         <ul>
           <li><i class="fa-solid fa-envelope"></i> info@sunbula.org</li>
@@ -100,8 +170,13 @@
    
    
 </div>
- </footer>  
-<script src="assets/js/javascript.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script> 
+ </footer>
+
+
+
+
+    <script src="assets/js/javascript.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  
 </body>
 </html>
