--- a/kitchin.html
+++ b/kitchin.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunbula Store</title>
+        <title>Sunbula Store</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-       <!-- ..............navbar...................... -->
+         <!-- ..............navbar...................... -->
   <nav class="navbar navbar-expand-lg bg-white fixed-top">
   <div class="container-fluid m-1">
     <a href="index.html"> <img  src="assets/images/logo.png" class="Logo" alt=""></a>
@@ -51,46 +51,50 @@
   </div>
     </div> 
   </nav>
-    <header class="kidsHeader">
-        <h1 class=" text-center mb-4">GIFTS</h1>
-        <p class="text-center">Looking for a handmade gift from Palestine? From books on Palestinian tatreez embroidery to handcrafted Christmas greeting<br> cards,explore our selection of handmade gifts by our artisans in Palestine. Showcasing traditional Palestinian embroidery and<br> paper-making techniques, there is nothing better than gifting your loved ones with the beauty and wonders of Palestine.</p>
-    </header>
-    <main>
-        <section>
+  <header class="kidsHeader">
+    <h1 class="mb-3 text-center">Kitchen</h1>
+    <p class="text-center">Add a touch of uniqueness to your kitchen with our range of handmade olive wood kitchenware from Palestine.<br>
+         Uniquely Palestiinian olive wood utensils, hand towels, and more. Explore our range.</p>
+  </header>
+   <main>
+        <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
       <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="books & bookmarks.html">
-            <img src="assets/images/book.jpeg" alt="..">
-          <h5 class="product-name">Books & Bookmarks</h5>
-        </a>
+            <img src="assets/images/kitchin1.jpeg" alt="..">
+          <h5 class="product-name">Dish Towel - Keffiyeh</h5>
+        <p class="producer">Bring a piece of Palestine to your kitchen with our new dish towel, handmade by young mothers from the Anata Bedouin community just outside Jerusalem. Cotton-blend waffle fabric with a hanging strap on the back.</p>
+          <p class="price">$5</p>
+          <button></button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="greeting cards.html">
-            <img src="assets/images/card.jpeg" alt="..">
-          <h5 class="product-name">Greeting Cards</h5>
-        </a>
+            <img src="assets/images/kitchin2.jpeg" alt="..">
+          <h5 class="product-name">Olive-wood Spoon Set</h5>
+          <p class="producer ">A set of 3 spoons hand-crafted from olive wood from Bethlehem made with traditional olive wood carving techniques
+Large: 10 (in) | 26 (cm). Medium: 8 (in) | 20 (cm), Small: 6 (in) | 16 (cm).</p>
+            <p class="price">$10</p>
+          <button></button>
         </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="olive oil soap.html">
-            <img src="assets/images/soap1.jpeg" alt="..">
-          <h5 class="product-name">Olive Oil Soap</h5>
-        </a>
+            <img src="assets/images/kitchin3.jpeg" alt="..">
+          <h5 class="product-name"> Embroidered Potholders - Surif</h5>
+          <p class="producer">A pair of practical, pretty potholders embroidered with the traditional patterns from Surif village. 100% cotton.</p>
+            <p class="price">$13</p>
+          <button></button>
         </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="keychains.html">
-            <img src="assets/images/key1.jpeg" alt="..">
-          <h5 class="product-name">Keychains</h5>
-        </a>
+            <img src="assets/images/kittchin4.jpeg" alt="..">
+          <h5 class="product-name">Olive-wood Honey Spoon</h5>
+          <p class="producer">Handcrafted from local olive wood from Bethlehem area.</p>
+            <p class="price">$3</p>
+          <button></button>
         </div></div>
-        
         </div></div>
-
         </section>
     </main>
      <footer class="Footer">
