--- a/bags.html
+++ b/bags.html
@@ -30,7 +30,7 @@
           <a class="nav-link text-danger " href="Clothing.html">Clothing</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link text-danger" href="bags.html">Bags&Accessoies</a>
+          <a class="nav-link text-danger" href="Bags&Accessoies.html">Bags&Accessoies</a>
         </li>
        <li class="nav-item mx-2">
           <a class="nav-link text-danger " href="Home&Kitchin.html">Home&Kitchin</a>
@@ -53,8 +53,8 @@
     </div> 
   </nav>
     <header class="kidsHeader">
-        <h1 class=" text-center mb-4">GIFTS</h1>
-        <p class="text-center">Looking for a handmade gift from Palestine? From books on Palestinian tatreez embroidery to handcrafted Christmas greeting<br> cards,explore our selection of handmade gifts by our artisans in Palestine. Showcasing traditional Palestinian embroidery and<br> paper-making techniques, there is nothing better than gifting your loved ones with the beauty and wonders of Palestine.</p>
+        <h1 class=" text-center mb-4">BAGS & ACCESSORIES</h1>
+        <p class="text-center">Looking to add flair to your everyday outfits? Shop our range of handmade bags and accessories made by <br> Palestinian artisans, and bring your looks to the next level. From embroidered bags, hand-stitched leather <br> wallets, to the quintessential Palestinian keffiyeh, these modern Palestinian accessories will add both style and<br> function to your wardrobe with their vibrant bursts of colours and sturdy construction. Highlighting traditional<br> Palestinian craft techniques, such as weaving and tatreez embroidery, you can carry a token of Palestinian<br> heritage wherever you go.</p>
     </header>
     <main>
         <section>
@@ -63,30 +63,16 @@
 
       <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="books & bookmarks.html">
-            <img src="assets/images/book.jpeg" alt="..">
-          <h5 class="product-name">Books & Bookmarks</h5>
+        <a href="">
+            <img src="assets/images/ " alt="..">
+          <h5 class="product-name">Handbags</h5>
         </a>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="greeting cards.html">
-            <img src="assets/images/card.jpeg" alt="..">
-          <h5 class="product-name">Greeting Cards</h5>
-        </a>
-        </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
-        <div class="product-card">
-        <a href="olive oil soap.html">
-            <img src="assets/images/soap1.jpeg" alt="..">
-          <h5 class="product-name">Olive Oil Soap</h5>
-        </a>
-        </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
-        <div class="product-card">
-        <a href="keychains.html">
-            <img src="assets/images/key1.jpeg" alt="..">
-          <h5 class="product-name">Keychains</h5>
+        <a href="">
+            <img src="assets/images/" alt="..">
+          <h5 class="product-name"></h5>
         </a>
         </div></div>
         
