--- a/home&kitchin.html
+++ b/home&kitchin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunbula Store</title>
+        <link rel="icon" href="assets/images/logo.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -29,7 +30,7 @@
           <a class="nav-link text-danger " href="Clothing.html">Clothing</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link text-danger" href="Bags&Accessoies.html">Bags&Accessoies</a>
+          <a class="nav-link text-danger" href="bags.html">Bags&Accessoies</a>
         </li>
        <li class="nav-item mx-2">
           <a class="nav-link text-danger " href="Home&Kitchin.html">Home&Kitchin</a>
@@ -74,7 +75,7 @@
         <div class="product-card">
         <a href="decor.html">
             <img src="assets/images/decor1.jpeg" alt="..">
-          <h5 class="product-name">Decor</h5>
+          <h5 class="product-name ">Decor</h5>
         </a>
         </div></div>
           <div class="col-lg-3 col-md-6 col-sm-12">
