--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunbula Store</title>
+    <link rel="icon" href="assets/images/logo.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -34,7 +35,7 @@
           <a class="nav-link text-danger " href="Clothing.html">Clothing</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link text-danger" href="Bags&Accessoies.html">Bags&Accessoies</a>
+          <a class="nav-link text-danger" href="bags.html">Bags&Accessoies</a>
         </li>
        <li class="nav-item mx-2">
           <a class="nav-link text-danger " href="Home&Kitchin.html">Home&Kitchin</a>
@@ -90,7 +91,7 @@
       </a>
 
       <!-- Grid 4 -->
-      <a href="home-kitchen.html" class="w-70 craft text-decoration-none text-center">
+      <a href="home&kitchin.html" class="w-70 craft text-decoration-none text-center">
         <div >
           <img src="assets/images/home&kitchin.jpeg" alt="Home & Kitchen" class="images">
           <p class="mt-2 text-dark fw-semibold">Home & Kitchen</p>
@@ -295,8 +296,8 @@
       <div>
         <h3>SHOP PRODUCTS</h3>
         <ul>
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#Clothing">Clothing</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#clothing.html">Clothing</a></li>
             <li><a href="#Bags&Accessories">Bags & Accessories</a></li>
             <li><a href="#Home&Kitchen">Home & Kitchen</a> </li>
             <li><a href="#Jewelry">Jewelry</a></li>
