--- a/jewelry.html
+++ b/jewelry.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunbula Store</title>
+        <link rel="icon" href="assets/images/logo.png">
        <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -30,7 +31,7 @@
           <a class="nav-link text-danger" href="clothing.html">Clothing</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link text-danger" href="bags&accessoies.html">Bags&Accessoies</a>
+          <a class="nav-link text-danger" href="bags.html">Bags&Accessoies</a>
         </li>
        <li class="nav-item mx-2">
           <a class="nav-link text-danger " href="home&kitchin.html">Home&Kitchin</a>
