--- a/about.html
+++ b/about.html
@@ -53,13 +53,81 @@
     </div> 
   </nav>
   <header class="ourstoryHeader">
-    <h1>Our Story</h1>
+   <div class="hero">
+    <h1 class="hStory">Our Story</h1>
+   </div>
   </header>
   <main>
-    <section class="ourStory"></section>
+    <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" > <section class="ourStory">
+        <div class="container">
+        <div class=" flex story pt-5 gap-4">
+          <div >
+          <h2>The Story of Sunbula </h2>
+ <p class="pStory">In the fertile valleys of Jenin, where golden wheat sways with the breeze and the land whispers stories of generations past, the seed of Sunbula was planted.
+Legend tells of a wise village woman who sat beneath an old olive tree, stitching her dress with care. When a curious child asked what she was making, she replied, "I’m not just sewing fabric — I’m stitching memory, preserving a story, and shaping the future."
+These words became the spark of inspiration. A group of women, bound by love for their heritage and a desire for change, began gathering — not in studios or workshops, but in kitchens and courtyards. With every embroidered thread and hand-felted shape, they poured in their stories, resilience, and dreams.
+What began as a humble gathering blossomed into Sunbula — a platform not only for handcrafted art but for the voices behind it. Today, Sunbula celebrates Palestinian tradition, empowers women, and connects timeless crafts with the world.</p>
+</div>
+  <div class="col-lg-3 col-md-6 col-sm-12">
+<img src="assets/images/story.jpeg"  class="story" alt="">   
+</div>  
+</div>
+</div>
+      </section></div> 
+  
   </main>
+   <footer class="Footer">
+  <div class="container">
+    <div class="flex ">
+      <div >
+        <h3>ABOUT</h3>
+        <ul>
+            <li><a href="#Our Story">Our Story</a></li>
+            <li><a href="Our Work">Our Work</a></li>
+            <li><a href="Palestinian Crafts">Palestinian Crafts</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3>SHOP PRODUCTS</h3>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#clothing.html">Clothing</a></li>
+            <li><a href="#Bags&Accessories">Bags & Accessories</a></li>
+            <li><a href="#Home&Kitchen">Home & Kitchen</a> </li>
+            <li><a href="#Jewelry">Jewelry</a></li>
+              <li><a href="#Kids&Babies">Kids & Babies</a></li>
+            <li><a href="#Gifts">Gifts</a></li>
+         </ul>
+      </div>
+      <div >
+      <h3>Follow Us</h3>
+      <p> <a href=""><i class="fa-brands fa-facebook-f"></i></a>  <a href=""> <i class="fa-brands fa-instagram"></i></a> <a href=""><i class="fa-brands fa-twitter"></i></a></p>
+      </div>
+      <div >
+        <h3>CONNECT WITH US</h3>
+        <ul>
+          <li><i class="fa-solid fa-envelope"></i> info@sunbula.org</li>
+          <li><i class="fa-solid fa-phone"></i> +972 569 228 479</li>
+          <form action="">
+            <input type="email" placeholder="You email id here">
+            <button type="submit" class="btn">Subscribe</button>
+         </form>
+        </ul>
+      </div>
+    </div>
+    <div class="copyright text-center"><img src="assets/images/footer-logo.png" class="img-fluid footerLogo" alt="footer Logo">Copyright © 2025 SUNBULA.STORE </div>
    
-    
+   
+</div>
+ </footer>
+
 </body>
    <script src="assets/js/javascript.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>   
