--- a/clothing.html
+++ b/clothing.html
@@ -56,70 +56,65 @@
      <h1 >Palestinian Embroidery</h1>
     </header>
     <main>
- <section class="clothingPage py-5 ">
-  <div class="container">
-    <!-- <h1 class="mb-5  mt-0 text-center">Palestinian Embroidery</h1> -->
-    <div class="row g-4">
-      <div class="col-lg-3 col-md-6 col-sm-12">
-        <div class="card h-100 shadow">
-          <img src="assets/images/clothing.jpeg" class="card-img-top" alt="Palestinian Shawl">
-          <div class="card-body text-center">
-            <h5 class="card-title">Palestinian Embroidery Shawl</h5>
-            <p class="card-text"><ins>$50</ins></p>
-            <a href="cart.html" class="btn btn-primary">Add to cart</a>
-          </div></div></div>
-      <div class="col-lg-3 col-md-6 col-sm-12">
-        <div class="card h-100 shadow">
-          <img src="assets/images/clothing1.jpeg" class="card-img-top" alt="Rainbow Hatta">
-          <div class="card-body text-center">
-            <h5 class="card-title">Rainbow Hatta Scarf</h5>
-            <p class="card-text"><ins>$30</ins></p>
-            <a href="cart.html" class="btn btn-primary">Add to cart</a>
-          </div></div></div>
+      <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" >   <section class="clothingPage py-5 ">
+    <div class="container my-4">
+    <div class="row justify-content-center gy-4">
 
       <div class="col-lg-3 col-md-6 col-sm-12">
-        <div class="card h-100 shadow">
-          <img src="assets/images/clothing2.jpeg" class="card-img-top" alt="Clerical Stole">
-          <div class="card-body text-center">
-            <h5 class="card-title">Clerical Stole (Long)</h5>
-            <p class="card-text">$33 <del><sub>$40</sub></del></p>
-            <a href="cart.html" class="btn btn-primary">Add to cart</a>
-          </div></div></div>
+        <div class="product-card">
+          <img src="assets/images/clothing1.jpeg" alt="...">
+          <h5 class="product-name">Rainbow Hatta Scarf</h5>
+            <p class="price">$30 <del><sub>$40</sub></del></p>
+               <button class="btn"> Add to cart</button>
+        </div></div>
 
       <div class="col-lg-3 col-md-6 col-sm-12">
-        <div class="card h-100 shadow">
-          <img src="assets/images/clothing3.jpeg" class="card-img-top" alt="Tatreez Shawl">
-          <div class="card-body text-center">
-            <h5 class="card-title">Embroidered Shawl - Tatreez</h5>
-                  <p class="card-text">
-  <span class="text-danger">$55</span>
-  <span class="text-muted text-decoration-line-through ms-2"> <del> <sub>$ 75</sub></del></span>
-</p>
-            <a href="cart.html" class="btn btn-primary">Add to cart</a>
-          </div></div></div>
+        <div class="product-card">
+          <img src="assets/images/clothing2.jpeg" alt="...">
+          <h5 class="product-name">Clerical Stole (Regular)</h5>
+          <p class="price">$40</p>
+          <button class="btn"> Add to cart</button>
 
-      <div class="col-lg-3 col-md-6 col-sm-12">
-        <div class="card h-100 shadow">
-          <img src="assets/images/clothing4.jpeg" class="card-img-top" alt="Spider Scarf">
-          <div class="card-body text-center">
-            <h5 class="card-title">Scarf - Spider</h5>
-            <p class="card-text">$40</p>
-            <a href="cart.html" class="btn btn-primary">Add to cart</a>
-          </div> </div></div>
-
-      <div class="col-lg-3 col-md-6 col-sm-12 ">
-        <div class="card h-100 shadow">
-          <img src="assets/images/clothing5.jpeg" class="card-img-top" alt="Pyramid Scarf">
-          <div class="card-body text-center">
-            <h5 class="card-title">Scarf - Pyramid</h5>
-            <p class="card-text">$35</p>
-            <a href="cart.html" class="btn">Add to cart</a>
-          </div></div></div>
-
-
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/clothing3.jpeg" alt="..">
+          <h5 class="product-name">Embroidered Palestinian Scarf</h5>
+          <p class="price">$50</p>
+             <button class="btn"> Add to cart</button>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/clothing4.jpeg" alt="...">
+          <h5 class="product-name">Scarf - Spider</h5>
+          <p class="price">$40</p>
+             <button class="btn"> Add to cart</button>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/clothing5.jpeg" alt="">
+          <h5 class="product-name">Scarf - Spider</h5>
+          <p class="price">$44</p>
+             <button class="btn"> Add to cart</button>
+        </div></div>
+        <div class="col-lg-3 col-md-6 col-sm-12">
+        <div class="product-card">
+          <img src="assets/images/clothing.jpeg" alt="">
+          <h5 class="product-name">Embroidered Palestinian Scarf</h5>
+          <p class="price">$14</p>
+             <button class="btn"> Add to cart</button>
+        </div></div>
     </div>
   </div>
-</section>
+</section> </div> 
+
   
     </main>
 <footer class="Footer">
