--- a/decor.html
+++ b/decor.html
@@ -57,7 +57,14 @@
     <p class="text-center">Explore our range of unique Palestinian decor. Brighten up your home with vibrant<br> Palestinian home decor hand crafted by artisans in the West Bank.</p>
   </header>
    <main>
-        <section class="decorSection">
+    <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" >    <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -67,7 +74,7 @@
           <h5 class="product-name">Embroidered Wall Hanging - al-Humdu</h5>
         <p class="producer">In stylized Arabic read "al-Hamdulillah (thanks be to God)." Embroidered on black cotton.</p>
           <p class="price">$15</p>
-          <button></button>
+          <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -75,7 +82,7 @@
           <h5 class="product-name">Wooden/Ceramic Kariya Keyholder</h5>
           <p class="producer">Hand-painted tiles with 'kariya' (village) scenery of Gaza. Wooden frame with hook on the back for hanging on the wall.</p>
             <p class="price">$21</p>
-          <button></button>
+          <button class="btn">Add to cart</button>
         </div></div>
            <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -83,7 +90,7 @@
           <h5 class="product-name">Miniature Arabesque Mirror </h5>
           <p class="producer">Arabesque patterns are intricately hand-carved on this wooden mirror by artisans from Gaza. Hanging hook on the back.</p>
             <p class="price">$24</p>
-          <button></button>
+          <button class="btn">Add to cart</button>
         </div></div>
            <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -91,10 +98,11 @@
           <h5 class="product-name">Mirror with Three Arabesque Tiles</h5>
           <p class="producer">Hand-painted arabesque tiles adorn this beautiful mirror, made by artisans of Gaza. Hanging hook on the back.</p>
             <p class="price">$16</p>
-          <button></button>
+          <button class="btn"> Add to cart</button>
         </div></div>
         </div></div>
-        </section>
+        </section>   </div> 
+    
     </main>
      <footer class="Footer">
   <div class="container">
