--- a/home.html
+++ b/home.html
@@ -58,7 +58,14 @@
         are hand stitched on these embroidered cushions by talented artisans across Palestine.</p>
   </header>
    <main>
-        <section class="homeSection">
+    <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" >  <section class="homeSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -68,7 +75,7 @@
           <h5 class="product-name">Embroidered Cushion Cover - Kohl Holders</h5>
         <p class="producer">This small-size cushion cover is intricately hand-embroidered with the traditional Kohl Holders pattern 100% cotton.</p>
           <p class="price">$50</p>
-          <button></button>
+          <button class="btn">Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -76,7 +83,7 @@
           <h5 class="product-name">Embroidered Cushion Cover - Kohl Holders</h5>
           <p class="producer">This small-size cushion cover is intricately hand-embroidered with the traditional Kohl Holders pattern 100% cotton.</p>
             <p class="price">$55</p>
-          <button></button>
+          <button class="btn">Add to cart</button>
         </div></div>
           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -84,7 +91,7 @@
           <h5 class="product-name">Embroidered Cushion Cover - Qamar</h5>
            <p class="producer">This small-size hand-embroidered cushion cover is named Qamar, Arabic for moon, the symbol of radiant beauty.</p>
             <p class="price">$60</p>
-          <button></button>
+          <button class="btn"> Add to cart</button>
         </div></div>
           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -92,7 +99,7 @@
           <h5 class="product-name">Embroidered Cushion Cover - Suleiman Mansour</h5>
            <p class="producer">This beautiful embroidered pillow is designed by the renowned Palestinian artist Suleiman Mansour, and features the word 'Allah' in stylized Arabic on four corners. Cotton 100%.</p>
             <p class="price">$64</p>
-          <button></button>
+          <button class="btn">Add to cart</button>
         </div></div>
          <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -100,7 +107,7 @@
           <h5 class="product-name">Embroidered Cushion Cover - Old Surif</h5>
            <p class="producer">This gorgeous pillow is hand-embroidered with the classic designs from the village of Surif. Cotton 100%.</p>
             <p class="price">$70</p>
-          <button></button>
+          <button class="btn"> Add to cart</button>
         
         </div></div>
          <div class="col-lg-3 col-md-6 col-sm-12">
@@ -109,10 +116,11 @@
           <h5 class="product-name">Embroidered Cushion - Almond Flowers</h5>
              <p class="producer">The 'almond flowers' pattern dipicts the spring time in Palestine, and was commonly used in the old days to adorn dresses and pillows. Made with the Syrian 'moreh' fabric. Stuffing included.</p>
             <p class="price">$66</p>
-          <button></button>
+          <button class="btn"> Add to cart</button>
         </div></div>
         </div></div>
-        </section>
+        </section>    </div> 
+      
     </main>
      <footer class="Footer">
   <div class="container">
