--- a/jewelry.html
+++ b/jewelry.html
@@ -57,7 +57,14 @@
       <h1>Palestinian Jewelry</h1>
     </header>
     <main>
-<section class="jewelrySection">
+      <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" ><section class="jewelrySection">
   <div class="container my-4">
     <div class="row justify-content-center gy-4">
 
@@ -66,6 +73,7 @@
           <img src="assets/images/jewelry1.jpeg" alt="...">
           <h5 class="product-name">Olive Leaf Necklace (925 Sterling Silver)</h5>
             <p class="price">$30 <del><sub>$40</sub></del></p>
+               <button class="btn"> Add to cart</button>
         </div></div>
 
       <div class="col-lg-3 col-md-6 col-sm-12">
@@ -73,66 +81,79 @@
           <img src="assets/images/jewelry2.jpeg" alt="...">
           <h5 class="product-name">Palestine Map Necklace - Andalusia</h5>
           <p class="price">$40</p>
+          <button class="btn"> Add to cart</button>
+
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/jewelry3.jpeg" alt="..">
           <h5 class="product-name">Palestinian Gold Necklace - Filistiniah (فلسطينيه)</h5>
           <p class="price">$50</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/jewelry4.jpeg" alt="...">
           <h5 class="product-name">Bedouin Brass Earrings - Shams</h5>
           <p class="price">$15</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/jewelry5.jpeg" alt="">
           <h5 class="product-name">Evil Eye Earrings</h5>
           <p class="price">$13</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/jewelry6.jpeg" alt="">
           <h5 class="product-name">Bedouin Brass Earrings - Camel</h5>
           <p class="price">$14</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/jewelry7.jpeg" alt="">
           <h5 class="product-name">Hand-cut Brass Earrings - Gaza</h5>
           <p class="price">$18</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/jewelry8.jpeg" alt="">
           <h5 class="product-name"></h5>Hand-cut Brass Pendant - Jerusalem</h5>
           <p class="price">$22</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
            <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/jewelry9.jpeg" alt="">
           <h5 class="product-name"></h5>Hand-cut Brass Pendant - Gaza</h5>
           <p class="price">$24</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
             <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/jewelry11.jpeg" alt="">
           <h5 class="product-name"></h5>Bedouin Brass Bracelet - Shams</h5>
           <p class="price">$15</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
               <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/jewelry10.jpeg" alt="">
           <h5 class="product-name"></h5>Embroidered Hair Clip</h5>
           <p class="price">$5</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
 
         
        
-    </div></div>
-</section>
+    </div></div> </div>
+  </section>
+
+
 </main>
 
  <footer class="Footer"> 
