--- a/kids&babies.html
+++ b/kids&babies.html
@@ -57,7 +57,14 @@
   <p class="text-center mb-5">Add cuteness to your kids’ wardrobes with unique fair trade clothing that has been ethically-made in <br>Palestine. From adorable onesies to cross-stitched toddler dresses adorned with vibrant traditional <br>Palestinian motifs, our online selection of kids’ apparel is made from natural, earth-friendly fabrics.<br> With our range of handcrafted fair trade toys that highlight the unique needle-felting techniques of <br>Palestinian artisans,let your kids create their very own desert adventures.</p>
 </header>
 <main>
-<section class="kids_Babies">
+  <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" > <section class="kids_Babies">
   <div class="container my-4">
     <div class="row justify-content-center gy-4">
 
@@ -67,6 +74,7 @@
           <h5 class="product-name">Baby Bib (L) - Saru</h5>
           <p class="producer">Surif Women's Cooperative</p>
           <p class="price">$13</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
 
       <div class="col-lg-3 col-md-6 col-sm-12">
@@ -75,6 +83,7 @@
           <h5 class="product-name">Baby Onesie - Beautiful</h5>
           <p class="producer">Oasis Workshop</p>
           <p class="price">$10</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -82,6 +91,7 @@
           <h5 class="product-name">Baby Onesie - Awesome</h5>
           <p class="producer">Stylish and comfy baby onesie made from premium cotton</p>
           <p class="price">$10</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -89,13 +99,15 @@
           <h5 class="product-name">Baby Donkey</h5>
           <p class="producer">An adorable stuffed animal donkey, made with a pretty of Syrian fabric.</p>
           <p class="price">$21</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/kids5.jpeg" alt="Baby Onesie">
           <h5 class="product-name">Bedouin Needle-felted Camel (S)</h5>
-          <p class="producer">These adorable camels are made of 100% natural sheep wool with needle-felting techniques, by Bedouin women in Jerusalem area.</p>
+          <p class="producer">Handmade wool camels by Bedouin women near Jerusalem.</p>
           <p class="price">$20</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -103,6 +115,7 @@
           <h5 class="product-name">Felt Sheep</h5>
           <p class="producer">Cute little sheep made of real sheep wool from Bethlehem. Available in beige and light brown.</p>
           <p class="price">$4</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -110,6 +123,7 @@
           <h5 class="product-name">Felt Caterpillar</h5>
           <p class="producer">Humorous caterpillars made of natural sheep wool from Bethlehem. A perfect toy for small children. Available in assorted colors.</p>
           <p class="price">$7</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -117,16 +131,19 @@
           <h5 class="product-name">Cross-stitch Dress - Sarou</h5>
           <p class="producer">Hand-embroidered 'sarou' (cypress) motif adorns this special dress. Viscose 100%, button closure and straps to tie in the back. 5cm hem on the skirt.</p>
           <p class="price">$20</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
           <img src="assets/images/kids9.jpeg" alt="Baby Onesie">
           <h5 class="product-name">Cross-stitch Baby Dress</h5>
-          <p class="producer">Hand-embroidered dress for that special little girl. Viscose 100%, lined, with a 5-cm hem at the bottom. Zipper on the side. Available in sizes 3-6 months, 6-12 months, and 12-18 months.</p>
+          <p class="producer">Hand-embroidered dress for that special little girl. Viscose 100%, lined, with a 5-cm hem at the bottom. Zipper on the side.</p>
           <p class="price">$30</p>
+             <button class="btn"> Add to cart</button>
         </div></div>
     </div></div>
-</section>
+</section>   </div>
+
 </main>
  <footer class="Footer">
   <div class="container">
