--- a/kitchin.html
+++ b/kitchin.html
@@ -58,7 +58,14 @@
          Uniquely Palestiinian olive wood utensils, hand towels, and more. Explore our range.</p>
   </header>
    <main>
-        <section class="decorSection">
+    <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" >    <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -68,7 +75,7 @@
           <h5 class="product-name">Dish Towel - Keffiyeh</h5>
         <p class="producer">Bring a piece of Palestine to your kitchen with our new dish towel, handmade by young mothers from the Anata Bedouin community just outside Jerusalem. Cotton-blend waffle fabric with a hanging strap on the back.</p>
           <p class="price">$5</p>
-          <button></button>
+          <button class="btn">Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -77,7 +84,7 @@
           <p class="producer ">A set of 3 spoons hand-crafted from olive wood from Bethlehem made with traditional olive wood carving techniques
 Large: 10 (in) | 26 (cm). Medium: 8 (in) | 20 (cm), Small: 6 (in) | 16 (cm).</p>
             <p class="price">$10</p>
-          <button></button>
+           <button class="btn">Add to cart</button>
         </div></div>
            <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -85,7 +92,7 @@ Large: 10 (in) | 26 (cm). Medium: 8 (in) | 20 (cm), Small: 6 (in) | 16 (cm).</p>
           <h5 class="product-name"> Embroidered Potholders - Surif</h5>
           <p class="producer">A pair of practical, pretty potholders embroidered with the traditional patterns from Surif village. 100% cotton.</p>
             <p class="price">$13</p>
-          <button></button>
+           <button class="btn">Add to cart</button>
         </div></div>
            <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -93,10 +100,11 @@ Large: 10 (in) | 26 (cm). Medium: 8 (in) | 20 (cm), Small: 6 (in) | 16 (cm).</p>
           <h5 class="product-name">Olive-wood Honey Spoon</h5>
           <p class="producer">Handcrafted from local olive wood from Bethlehem area.</p>
             <p class="price">$3</p>
-          <button></button>
+           <button class="btn">Add to cart</button>
         </div></div>
         </div></div>
-        </section>
+        </section>  </div>
+      
     </main>
      <footer class="Footer">
   <div class="container">
