--- a/books & bookmarks.html
+++ b/books & bookmarks.html
@@ -57,7 +57,15 @@
     <p class="text-center">Explore our range of beautiful hand stitched bookmarks and books on Palestinian embroidery.<br> From embroidery techniques to the history of embroidery in Palestine.</p>
   </header>
    <main>
-        <section class="decorSection">
+    <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" >  
+            <section class="decorSection">
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -67,7 +75,7 @@
           <h5 class="product-name">Seventeen Embroidery Techniques from Palestine</h5>
         <p class="producer"></p>
           <p class="price">$25</p>
-          <button></button>
+           <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -75,7 +83,7 @@
           <h5 class="product-name">Embroidering A Life</h5>
           <p class="producer "></p>
             <p class="price">$10</p>
-          <button></button>
+         <button class="btn"> Add to cart</button>
         </div></div>
            <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -83,7 +91,7 @@
           <h5 class="product-name">Gaza Bookmarks </h5>
           <p class="producer"></p>
             <p class="price">$6</p>
-          <button></button>
+             <button class="btn"> Add to cart</button>
         </div></div>
            <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
@@ -91,7 +99,7 @@
           <h5 class="product-name">Cross-stitch Bookmark</h5>
           <p class="producer"></p>
             <p class="price">$8</p>
-          <button></button>
+             <button class="btn"> Add to cart</button>
         </div></div>
          <div class="col-lg-3 col-md-6 col-sm-12">
          <div class="product-card">
@@ -99,7 +107,7 @@
           <h5 class="product-name">Cross-stitch Bookmark</h5>
           <p class="producer"></p>
             <p class="price">$8</p>
-          <button></button>
+             <button class="btn"> Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
          <div class="product-card">
@@ -107,10 +115,11 @@
           <h5 class="product-name">Cross-stitch Bookmark</h5>
           <p class="producer"></p>
             <p class="price">$8</p>
-          <button></button>
+             <button class="btn"> Add to cart</button>
         </div></div>
         </div></div>
-        </section>
+        </section>   </div> 
+    
     </main>
      <footer class="Footer">
   <div class="container">
