--- a/handbags.html
+++ b/handbags.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunbula Store</title>
-        <link rel="icon" href="assets/images/logo.png">
+        <title>Sunbula Store</title>
+            <link rel="icon" href="assets/images/logo.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-       <!-- ..............navbar...................... -->
+         <!-- ..............navbar...................... -->
   <nav class="navbar navbar-expand-lg bg-white fixed-top">
   <div class="container-fluid m-1">
     <a href="index.html"> <img  src="assets/images/logo.png" class="Logo" alt=""></a>
@@ -52,59 +52,55 @@
   </div>
     </div> 
   </nav>
-    <header class="kidsHeader">
-        <h1 class=" text-center mb-4">GIFTS</h1>
-        <p class="text-center">Looking for a handmade gift from Palestine? From books on Palestinian tatreez embroidery to handcrafted Christmas greeting<br> cards,explore our selection of handmade gifts by our artisans in Palestine. Showcasing traditional Palestinian embroidery and<br> paper-making techniques, there is nothing better than gifting your loved ones with the beauty and wonders of Palestine.</p>
-    </header>
-    <main>
-      <section>
+  <header class="kidsHeader">
+    <h1 class="mb-3 text-center">Handbags</h1>
+  </header>
+   <main> <section>
           <div id="loading">
     <div class="spinner-border" role="status" >
       <span class="visually-hidden">Loading</span>
     </div>
     <p>Loading...</p>
   </div>
-      <div id="main-content" >      
-        <section class="gifts">
-            <div class="container my-4">
+      </section> <div id="main-content" >  <section class="decorSection">
+        <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
       <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="books & bookmarks.html">
-            <img src="assets/images/book.jpeg" alt="..">
-          <h5 class="product-name">Books & Bookmarks</h5>
-        </a>
+            <img src="assets/images/bag3.jpeg" alt="..">
+          <h5 class="product-name">Summer Handbag</h5>
+        <p class="producer">Sampler of popular embroidery motif adorns this pretty handbag. Wooden handles are handcrafted by local artisans in Bethlehem. Zipper closure, pockets inside.</p>
+          <p class="price">$ 49</p>
+          <button class="btn">Add to cart</button>
         </div></div>
         <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="greeting cards.html">
-            <img src="assets/images/card.jpeg" alt="..">
-          <h5 class="product-name">Greeting Cards</h5>
-        </a>
+            <img src="assets/images/bag4.jpeg" alt="..">
+          <h5 class="product-name">Summer Handbag</h5>
+          <p class="producer ">Sampler of popular embroidery motif adorns this pretty handbag. Wooden handles are handcrafted by local artisans in Bethlehem. Zipper closure, pockets inside.</p>
+            <p class="price">$49</p>
+           <button class="btn">Add to cart</button>
         </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="olive oil soap.html">
-            <img src="assets/images/soap1.jpeg" alt="..">
-          <h5 class="product-name">Olive Oil Soap</h5>
-        </a>
+            <img src="assets/images/bag.jpeg" alt="..">
+          <h5 class="product-name">Floral Handbag</h5>
+          <p class="producer">Handcrafted embroidered handbag with floral motifs on a beige base, made by women in Idna with wooden handles from Bethlehem. Features inner pockets and a magnetic closure.</p>
+            <p class="price">$45</p>
+           <button class="btn">Add to cart</button>
         </div></div>
-          <div class="col-lg-3 col-md-6 col-sm-12">
+           <div class="col-lg-3 col-md-6 col-sm-12">
         <div class="product-card">
-        <a href="keychains.html">
-            <img src="assets/images/key1.jpeg" alt="..">
-          <h5 class="product-name">Keychains</h5>
-        </a>
+            <img src="assets/images/bag5.jpeg" alt="..">
+          <h5 class="product-name">Floral Handbag</h5>
+          <p class="producer">Hand-embroidered red handbag with delicate floral motifs, made by women in Idna with wooden handles from Bethlehem. Includes lined pockets and a magnetic closure</p>
+            <p class="price">$45</p>
+           <button class="btn">Add to cart</button>
         </div></div>
-        
         </div></div>
-
-        </section>
+        </section></div> 
       
-      </div> 
-       </section>
-   
     </main>
      <footer class="Footer">
   <div class="container">
