--- a/home&kitchin.html
+++ b/home&kitchin.html
@@ -60,7 +60,14 @@
              Palestinian culture in your home.</p>
     </header>
     <main>
-        <section>
+  <section>
+          <div id="loading">
+    <div class="spinner-border" role="status" >
+      <span class="visually-hidden">Loading</span>
+    </div>
+    <p>Loading...</p>
+  </div>
+      </section> <div id="main-content" >       <section>
         <div class="container my-4">
             <div class="row justify-content-center gy-4">
 
@@ -88,7 +95,8 @@
         
         </div></div>
 
-        </section>
+        </section>    </div> 
+   
     </main>
      <footer class="Footer">
   <div class="container">
