add butto cheakout

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <button class="navbar-toggler  me-2 bttn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-      <a href="cart.html"><i class="fa-solid fa-bag-shopping me-2 d-lg-none"></i></a>
+      <!-- <a href="cart.html"><i class="fa-solid fa-bag-shopping me-1 d-lg-none"></i></a> -->
     <div class="collapse navbar-collapse  " id="navbarSupportedContent">
       <ul class="navbar-nav mb-2 mb-lg-0 mx-auto">
         <li class="nav-item mx-2">
@@ -85,10 +85,15 @@
         </li>
 
       </ul>
-      <a href="cart.html"><i class="fa-solid fa-bag-shopping ms-2 d-none d-lg-block"></i></a>
 
   </div>
+  <div class="shop-container "  id="shopbag">
+          <a href="cart.html"><i class="fa-solid fa-bag-shopping shop ms-3 fs-2"></i> </a> 
+          <span id="cart-count">0</span>   
+          </div>   
     </div> 
+                  
+
   </nav>
   <main>
     <section>
